--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+############### IntelliJ ###############
+.idea
+
+################ Gradle ################
+.gradle
+
+################# Java #################
 # Compiled class file
 *.class
 
